--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "lucide-react": "^0.525.0",
     "material-ui-confirm": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
