--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
+    "react-type-animation": "^3.2.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11"
