--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "material-ui-confirm": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-redux": "^9.2.0",
