--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fontsource-variable/inter": "^5.2.6",
+    "@fontsource-variable/montserrat": "^5.2.6",
+    "@fontsource/aclonica": "^5.2.6",
+    "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
