--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.525.0",
     "material-ui-confirm": "^4.0.0",
     "moment": "^2.30.1",
