--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/inter": "^5.2.6",
     "@fontsource-variable/montserrat": "^5.2.6",
     "@fontsource/aclonica": "^5.2.6",
+    "@mui/lab": "^7.0.0-beta.14",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
@@ -30,6 +31,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
+    "react-type-animation": "^3.2.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11"
