--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "material-ui-confirm": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-countdown": "^2.3.6",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
